# token_synchronize

./: Anchor.toml  README.md  package-lock.json  package.json
programs/custom_transfer_hook/: Cargo.toml
programs/custom_transfer_hook/src/: lib.rs
programs/token_synchronize/: Cargo.toml
programs/token_synchronize/src/: context.rs  cpi.rs  error.rs  helper.rs  lib.rs  temp.rs
programs/token_synchronize/src/helper/: mod.rs  spl_tokens.rs
tests/: main.rs  token_synchronize.spec.ts  token_synchronize.ts  transfer_unified.spec.ts
