[package]
name = "custom_transfer_hook"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "custom_transfer_hook"

[features]
default = []
solana = []
anchor-debug = []
custom-panic = []
custom-heap = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"  
anchor-spl = {version="0.31.1", features = ["token_2022"]}
solana-program-entrypoint = "2.3.0"
spl-token-2022 = "6.0.0"
spl-transfer-hook-interface = "0.10.0"
spl-tlv-account-resolution = "0.10.0"
spl-type-length-value = "0.8.0"
spl-pod = "0.5.0"

