[package]
name = "token_synchronize"
version = "1.2.5"
authors = ["NinetyEight"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
# arrayref = "0.3.9"
# num_enum = "0.7.4"
spl-token = { version = "8.0.0", default-features = false, features = ["no-entrypoint"] }
spl-token-2022 = { version = "6.0.0", default-features = false, features = ["no-entrypoint"] }
# spl-token-2022 = "6.0.0"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
cpi = ["no-entrypoint"]
default = []
devnet = []
mainnet = []
no-entrypoint = []
no-idl = []

[lib]
name = "token_synchronize"
crate-type = ["cdylib", "lib"]
